--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-	background: url("bg-01.svg");
+	background: url("bg-06.jpg");
 	background-size: cover;
 	background-position: center center;
 	background-repeat:  no-repeat;
