--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
 }
 
 .subtitle {
-	font-size: 28px;
+	font-size: 20px;
 	color: white;
 }
 
@@ -25,6 +25,28 @@ body {
 	height: 280px;
 	margin-top: 2.5vh;
 }
+.header-img {
+	height: 40px;
+	margin-top: 2vh;
+}
+
+.nav-img {
+	height: 60px;
+
+}
+
+.row-logo {
+    padding: 10px 20px 20px 15px;
+}
+
+.row-logo-b {
+    padding: 0 20px 20px 0px;
+}
+
+.cardtext {
+    font-size: 10px;
+}
+
 
 .drawer > div {
 	width: 0px !important;
