--- a/src/style/App.css
+++ b/src/style/App.css
@@ -14,6 +14,9 @@ body {
 	margin: auto;
 	color: #ffffff;
 }
+.landing-msg {
+	margin-top: 100px;
+}
 
 .spacer {
 	height: 9vh;
@@ -28,6 +31,11 @@ body {
 	font-size: 20px;
 	color: white;
 
+}
+
+.transaction-heading{
+
+	text-align: center;
 }
 
 .landing-img {
